Closed
Bug 347200
Opened 19 years ago
Closed 19 years ago
Spellchecking defaults do not affect designmode
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: brettw, Assigned: zerodpx)
References
Details
(Keywords: fixed1.8.1)
Attachments
(3 files)
|
472 bytes,
text/html
|
Details | |
|
2.41 KB,
patch
|
brettw
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
|
2.50 KB,
patch
|
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
The same attribute that controls textarea spellchecking should control designmode documents; they should act exactly like textareas. The code to set the defaults for designmode does not seem to work. I can turn it on manually and it works.
| Reporter | ||
Updated•19 years ago
|
Flags: blocking1.8.1?
| Reporter | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 3•19 years ago
|
||
Actually, this _is_ DOM, not spelling checker. (Trust me, I wrote the code that's broken here.) Not that it matters terribly.
Component: Spelling checker → DOM
| Assignee | ||
Comment 5•19 years ago
|
||
The problem was that the document was creating its editor, THEN setting its "designmode" member variable to true. During editor creation we eventually wound up asking the document if designmode was on, which at that point it wasn't.
The fix here is simply to set the mEditingIsOn member variable to the desired state before goofing with the editor, and change it back on failure.
Attachment #232004 -
Flags: superreview?(bugmail)
Attachment #232004 -
Flags: review?(brettw)
| Assignee | ||
Comment 6•19 years ago
|
||
Here's the branch version of the same patch, which is identical except for the file offset.
| Assignee | ||
Comment 7•19 years ago
|
||
Setting target milestone so this will show up on blocking radar.
Target Milestone: --- → mozilla1.8beta2
Updated•19 years ago
|
Flags: blocking1.8.1? → blocking1.8.1+
| Reporter | ||
Comment 8•19 years ago
|
||
Comment on attachment 232004 [details] [diff] [review]
patch v1
looks good
Attachment #232004 -
Flags: review?(brettw) → review+
Updated•19 years ago
|
Attachment #232004 -
Flags: superreview?(bugmail) → superreview+
| Assignee | ||
Comment 9•19 years ago
|
||
Checked into trunk to bake.
/mozilla/content/html/document/src/nsHTMLDocument.cpp 3.693
Whiteboard: [baking]
| Assignee | ||
Comment 10•19 years ago
|
||
Comment on attachment 232005 [details] [diff] [review]
patch v1 (branch version)
Requesting branch approval once this has baked. Probably only needs one night, and I'd like to get this in pre-freeze since this is a regression from B1.
Attachment #232005 -
Flags: approval1.8.1?
Comment 11•19 years ago
|
||
Comment on attachment 232005 [details] [diff] [review]
patch v1 (branch version)
a=drivers, please go ahead and land on the branch.
Attachment #232005 -
Flags: approval1.8.1? → approval1.8.1+
| Assignee | ||
Comment 12•19 years ago
|
||
Fixed on branch.
/mozilla/content/html/document/src/nsHTMLDocument.cpp 3.615.2.29
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [baking]
Comment 13•19 years ago
|
||
This caused crash bug 348497.
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•