Bug 347200: Designmode documents aren't spellchecked by default. r=brettw sr=bryner